[autoconf] fix CLEANFILES and DISTCLEANFILES
* Makefile.am: fix file name with package version
* cxx4/Makefile.am: fix CLEANFILES variable accepting explicit file names
  only, no globbing allowed in variable CLEANFILES

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ EXTRA_DIST = CMakeLists.txt README.md CTestCustom.cmake \
 	CTestConfig.cmake.in
 
 # Remove these generated files, for a distclean.
-DISTCLEANFILES = VERSION
+DISTCLEANFILES = VERSION.txt
 
 install-data-hook:
 	@echo ''
